# llm7

./: .env  .gitignore  .pre-commit-config.yaml  README.md  double_underfscore.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  pytest_formatter.py  pytest_summary.txt  requirements-dev.txt  requirements.txt  setup.py
.pytest__cache/v/cache/: lastfailed
config/: __init__.py  settings.py
docs/architecture/: llm7_structure.txt
garbage/: memory_manager.py
garbage/config/: config.yaml
llm7/: main.py
llm7.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm7/config/: config.yaml  settings.py
llm7/memory/: memory-manager.py
llm7/ollama/: exceptions.py  logger.py  ollama_examples.py  ollama_interface.py  ollama_model_manager.py
llm7/scraper/: scraper.py
llm7/storage/cache/: __init__.py
src/llm7/: __init__.py  main.py
src/llm7/config/: config.yaml
src/llm7/memory/: memory-manager.py
src/llm7/ollama/: exceptions.py  interface.py  logger.py  model_manager.py  ollama_config.py  ollama_examples.py  ollama_model_manager.py
src/llm7/scraper/: scraper.py
src/llm7/utils/: RAC Phone Directory (Jan 2025).xlsx
tests/: conftest.py  test_main.py
tests/Claude testing/: memory-manager (1).py  memory-manager.py  test memory manager script.py  test-script (1).py  test-script (2).py  test-script (3).py  test-script (4).py  test-script-final (1).py  test-script-final (2).py  test-script-final.py  test-script.py
tests/Claude testing/chroma_db/: chroma.sqlite3
tests/ollama/: test_interface.py  test_model_manager.py
tests/scaper/: test_scraper.py
tests/scraper/: test_scraper.py
