[build-system]
requires = ["setuptools>=75.7.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm7"
version = "0.1.0"
description = "A modular AI assistant"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "typing_extensions>=4.12.2",
    "requests",
    "pydantic",
    "chromadb",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8>=7.0.0",
    "mypy",
    "pytest-asyncio>=0.23.5",
    "pytest>=8.0.0",
    "pytest-cov",
    "coverage>=7.6.10",
    "pycodestyle>=2.12.1",
    "pyflakes>=3.2.0",
    "mccabe>=0.7.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm7*"]

[tool.black]
line-length = 69
target-version = ["py312"]
include = ".pyi?$"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=llm7"
testpaths = ["tests"]
pythonpath = [
    ".",     # Root directory first
    "src"    # Then src directory
]
asyncio_mode = "auto"  # Add this for pytest-asyncio

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
docstring-convention = "google"
